objects/ALM_Application_Result__c.object
<CustomObject>
    <fields>
        <fullName>ALM_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ALM Job</label>
        <referenceTo>ALM_Job__c</referenceTo>
        <relationshipLabel>ALM Application Results</relationshipLabel>
        <relationshipName>ALM_Application_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(Run_Time__c -  Start_Time__c) * 60 * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>ALM Application Results</relationshipLabel>
        <relationshipName>ALM_Application_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Success with Warnings</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <inlineHelpText>The time the job finished running</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <inlineHelpText>The time the job started running</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tool__c</fullName>
        <label>Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SCAN</fullName>
                </value>
                <value>
                    <fullName>Automated Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warnings__c</fullName>
        <label>Warnings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>ALM Application Result</label>
    <nameField>
        <displayFormat>AAR-{00000}</displayFormat>
        <label>ALM Application Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ALM Application Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>